# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.13 2006/06/04 08:50:57 keri Exp $

  04 Jun 2006; Keri Harris <keri@gentoo.org> +files/swi-prolog-PLBASE.patch,
  swi-prolog-5.6.8.ebuild, swi-prolog-5.6.9.ebuild,
  swi-prolog-5.6.10.ebuild, swi-prolog-5.6.11.ebuild,
  swi-prolog-5.6.12.ebuild:
  Support multilib install targets.

  23 May 2006; Keri Harris <keri@gentoo.org> swi-prolog-5.6.8.ebuild,
  swi-prolog-5.6.9.ebuild, swi-prolog-5.6.10.ebuild,
  swi-prolog-5.6.11.ebuild, swi-prolog-5.6.12.ebuild:
  Build a threaded prolog engine for JPL. Reported by Moisés Braga Ribeiro
  <moisesbr@gmail.com> in #133997

  29 Apr 2006; <nixnut@gentoo.org> swi-prolog-5.6.8.ebuild:
  Stable on ppc. Bug #130895

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  23 Apr 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  swi-prolog-5.6.8.ebuild:
  Stable on x86, see bug #130895.

  22 Apr 2006; Keri Harris <keri@gentoo.org>
  files/swi-prolog-packages-test.patch,
  files/swi-prolog-packages-test-r1.patch:
  Do not run ssl testsuite if threading is disabled. Reported by Krzysiek
  Pawlik <nelchael@gentoo.org> in bug #130895

  19 Apr 2006; Keri Harris <keri@gentoo.org> swi-prolog-5.6.8.ebuild,
  swi-prolog-5.6.9.ebuild, swi-prolog-5.6.10.ebuild,
  swi-prolog-5.6.11.ebuild, swi-prolog-5.6.12.ebuild:
  Add block against swi-prolog-lite

*swi-prolog-5.6.12 (19 Apr 2006)

  19 Apr 2006; Keri Harris <keri@gentoo.org> +swi-prolog-5.6.12.ebuild:
  Version bump.

*swi-prolog-5.6.11 (14 Apr 2006)

  14 Apr 2006; Keri Harris <keri@gentoo.org> +swi-prolog-5.6.11.ebuild:
  Version bump.

*swi-prolog-5.6.10 (07 Apr 2006)

  07 Apr 2006; Keri Harris <keri@gentoo.org> +swi-prolog-5.6.10.ebuild:
  Version bump.

*swi-prolog-5.6.9 (27 Mar 2006)

  27 Mar 2006; Keri Harris <keri@gentoo.org>