@@ -1,0 +1,3 @@
+MD5 b95ffdbb3d65ce8a96c17ecdf067a179 pl-5.6.13.tar.gz 10626601
+RMD160 970d89103e97c520f8ab5d1011e55eb36148e757 pl-5.6.13.tar.gz 10626601
+SHA256 40d6ebdec9baffb4b1a82dcbd54220e549f6e735e7ff94f4f40514f87cc52111 pl-5.6.13.tar.gz 10626601
