@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.13 2006/06/04 08:50:57 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.14 2006/06/08 11:04:22 keri Exp $
+
+*swi-prolog-5.6.13 (08 Jun 2006)
+
+  08 Jun 2006; Keri Harris <keri@gentoo.org> +swi-prolog-5.6.13.ebuild:
+  Version bump.
 
   04 Jun 2006; Keri Harris <keri@gentoo.org> +files/swi-prolog-PLBASE.patch,
   swi-prolog-5.6.8.ebuild, swi-prolog-5.6.9.ebuild,
